buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
    }
}

plugins {
    id "java"
    id "maven"
    id "idea"
   // id "com.jfrog.bintray" version "1.8.1"
}


apply plugin: 'com.bmuschko.nexus'
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'maven'

//apply from: 'security.properties'

archivesBaseName = 'object-mapper'
group = 'io.github.lourencomcviana'
version = '1.0.0-RELEASE'

description = "object-mapper"

sourceCompatibility = 8
targetCompatibility = 8

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

//apply from: 'gradle/maven.gradle'

repositories {
//    maven {
//        url  "https://dl.bintray.com/lourencomcviana/io.github.lourencomcviana"
//    }
    mavenCentral()
    jcenter()

    flatDir {
        dirs 'lib'
    }
}
dependencies {
//    compile group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.9.10'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version:'2.9.2'

    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.2'
    compile group: 'ch.qos.logback', name:'logback-classic', version: '1.0.9'
    compile group: 'ch.qos.logback', name:'logback-core', version: '1.0.9'

    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'

    compile 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'

    testCompile 'org.projectlombok:lombok:1.18.10'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.10'

    testCompile 'org.junit.jupiter:junit-jupiter-api:5.4.2'
    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.4.2'

}

extraArchive {
    sources = true
    tests = true
    javadoc = true
}
nexus {
    sign = true
    repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
    snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
}

//println "${bintray.key}"
//bintray {
//    user = "${bintray.key}"
//    key = "${bintray.password}"
//
//}

test {
    useJUnitPlatform()
}

sourceSets {
    main.java.srcDir "src/main/java"
    main.resources.srcDir "src/main/resources"
}

jar {
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                'Main-Class': "${group}.Cmd",
                'Implementation-Version': this.version
        )
    }
}


task createPom {
    pom {
        project {
            groupId this.group
            artifactId this.archivesBaseName
            version  this.version
            description this.description
            url 'https://github.com/lourencomcviana/object-mapper'
            packaging 'jar'
            inceptionYear '2019'
            properties {
                "maven.compiler.source" "8"
                "maven.compiler.target" "8"
                "java.version" "8"
                "project.build.sourceEncoding" 'UTF-8'
            }
            licenses {
                license {
                    name 'GNU GENERAL PUBLIC LICENSE'
                    url 'https://www.gnu.org/licenses/gpl.html'
                    distribution 'repo'
                }
            }

        }
    }.withXml {
        asNode().appendNode('build').with {
            appendNode('plugins').with {
                appendNode('plugin').with {
                    appendNode('groupId', 'org.apache.maven.plugins')
                    appendNode('artifactId', 'maven-surefire-plugin')
                    appendNode('configuration').with {
                        appendNode('skipTests', 'true')
                    }
                }
                appendNode('plugin').with {
                    appendNode('groupId', 'org.apache.maven.plugins')
                    appendNode('artifactId', 'maven-jar-plugin')
                    appendNode('configuration').with {
                        appendNode('archive').with {
                            appendNode('manifest').with {
                                appendNode('addClasspath', 'true')
                                appendNode('mainClass', "${this.group}.Cmd")
                                appendNode('classpathPrefix', "src")


                            }
                            appendNode('manifestEntries').with {
                                appendNode('Implementation-Version', "${this.version}")
                            }
                        }
                    }
                }
            }
        }
        asNode().appendNode('packaging','jar')
    }.writeTo("pom.xml")
}
